--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "private": false,
   "scripts": {
-    "start": "node server.js"
+    "start": "node test.js"
   },
   "dependencies": {
     "async": "0.9.0",
