--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Alexey Pedyashev",
   "description": "Optimized thumbnail-generation algorithm (edge-maximizing crop & resize)",
   "name": "opticrop-node",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/apedyashev/opticrop-node"
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "async": "0.9.0",
-    "get-pixels": "1.1.2",
-    "gm": "1.16.0"
+    "gm": "1.16.0",
+    "node-gd": "0.2.3"
   },
   "engines": {
     "node": "*"
