--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "async": "0.9.0",
     "gm": "1.16.0",
+    "memwatch-next": "^0.3.0",
     "node-gd": "1.5.0"
   },
   "engines": {
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^7.0.23",
+    "mkdirp": "^0.5.1",
     "typescript": "^2.3.4"
   }
 }
