--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   ],
   "private": false,
   "scripts": {
-    "start": "node test.js",
+    "test": "npm run build && node test.js",
     "build": "tsc -p ."
   },
   "dependencies": {
     "async": "0.9.0",
+    "bluebird": "^3.5.0",
     "gm": "1.16.0",
     "memwatch-next": "^0.3.0",
     "node-gd": "1.5.0"
