--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "private": false,
   "scripts": {
     "test": "npm run build && node test.js",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "lint": "tslint -c tslint.json -t verbose src/**/*.ts"
   },
   "dependencies": {
     "async": "0.9.0",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/node": "^7.0.23",
     "mkdirp": "^0.5.1",
+    "tslint": "^5.4.3",
     "typescript": "^2.3.4"
   }
 }
